logged the length of anArray in the console

--- a/previously.html
+++ b/previously.html
@@ -453,7 +453,7 @@
       }
       i++;
       j++;
-      console.log(anArray);
+      console.log(anArray, `is ${anArray.length} items long`);
     };
 
     let previous = () => {
